--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,19 @@ $dark: #3E363F;
 $red: #DD403A;
 $cream: #FFFCE8;
 
+body {
+    font-size: 1.5em;
+    line-height: 1.6;
+    font-family: 'Raleway', sans-serif;
+    background-color: $dark;
+}
+.title {
+  padding-bottom: 40px;
+}
+.paragraph {
+  padding-bottom: 20px;
+}
+
 .comment-box {
   font-family: 'Raleway', sans-serif;
   border-radius: 4px;
@@ -12,11 +25,6 @@ $cream: #FFFCE8;
   opacity: 1;
 }
 
-body {
-    font-size: 1.5em;
-    font-family: 'Raleway', sans-serif;
-    background-color: $dark;
-}
 .blogpost {
   font-family: 'Raleway', sans-serif;
   border-radius: 4px;
@@ -36,8 +44,40 @@ body {
 }
 
 .hide-button {
-  margin-top: 3em;
+  margin-top: 1em;
+  padding-bottom: 4em;
   padding-right: 30px;
+}
+
+.avatar {
+   content:url(/avatar.png);
+   height: auto;
+   width:70px;
+   float:left;
+   padding: 5px;
+}​
+
+.comment-right {
+ padding-left: 30px;
+}
+
+.comment-bottom {
+  padding-left: 90px;
+}
+
+.comment-top {
+  font-size: 1.1em;
+  padding-left: 80px;
+}
+#delete-a {
+    color: $dark;
+  float: right;
+  -webkit-transition: color 1s;
+  -webkit-transition: font-size 1s;
+  &:hover {
+    font-size: 1.1em;
+    color: $red;
+  }
 }
 
 hr {
